# sync-notes

./: .gitignore  README.md  pyproject.toml
notes_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
